# src/routes/discount.routes.ts
@@ -1,0 +1,8 @@
+import { discountController } from '@/controllers';
+import { Router } from 'express';
+
+const router = Router();
+
+router.get('/all', discountController.getAllDiscounts);
+
+export default router;
